--- a/src/assets/style/index.scss
+++ b/src/assets/style/index.scss
@@ -1,3 +1,12 @@
-.container{
+@import "colors";
+@import "mixin";
+
+.main{
+  width: 100%;
+  min-width: 1366px;
+  height: 1080px;
+  overflow: hidden;
+}
+.main-content{
   height: 100%;
 }
